playk8s/ingress/app-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /api/auth/?(.*)
        backend:
          serviceName: np-login
          servicePort: 8000
      - path: /api/pacientes/?(.*)
        backend:
          serviceName: np-pacientes
          servicePort: 7000
